:sparkles: Changed controller