@@ -3,9 +3,8 @@ package dev.bug.spy.service;
 import dev.bug.spy.DataBuilder;
 import dev.bug.spy.model.SecurityData;
 import dev.bug.spy.repository.SecurityDataRepository;
-import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -13,24 +12,21 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
-@RequiredArgsConstructor
-public class RedisSpyService {
-
-    private final SecurityDataRepository repository;
-    private final DataBuilder dataBuilder;
+public record RedisSpyService(SecurityDataRepository repository,
+                              DataBuilder dataBuilder) {
 
     public Page<SecurityData> findAllBy(int page, int pageSize) {
-        return repository.findAll(Pageable.ofSize(pageSize).withPage(page));
+        return repository.findAll(PageRequest.of(page, pageSize));
     }
 
     public void clearDatabase() {
         repository.deleteAll();
     }
 
-    public void initializeDatabase() {
-        List<SecurityData> dataList = IntStream.range(1, 20)
+    public void createDataFrom(int count) {
+        List<SecurityData> dataList = IntStream.rangeClosed(1, count)
                 .mapToObj(dataBuilder::buildSecurityData)
-                .collect(Collectors.toList());
+                .toList();
         repository.saveAll(dataList);
     }
 }
